# BusinessManagementSystem

./: .env.sample  pyproject.toml
alembic/: env.py
alembic/versions/: 0071f67f212f_delete_unique_into_field_commentmodel_.py  043090676644_add_ratingmodel.py  0ae24ae53698_change_status_filed_in_taskmodel.py  0d2dd6964482_add_list_to_relate_ratings_in_usermodel.py  117ac2be1a31_add_relate_with_usermodel_to_taskmodel.py  18930d291c3c_remove_field_tasks_from_usermodel.py  222dcefe1d9d_delete_nullable_from_title_and_.py  2eec2513b38e_rename_task_to_taskmodel.py  376ddba90a7f_add_order_by_to_relate_taskmodel_.py  3a398c691325_add_forign_keys_to_relationship_users_.py  41776d26d3ea_add_canceled_field_to_meetingmodel.py  43cc73758235_add_ordering_to_meeting_and_tasks_.py  4bd67b4130c7_create_users_and_tasks.py  4c1873fdc942_add_uselist_true_to_taskmodel_commnets_.py  5ed23e8bf5e0_add_commets_model_and_comments_field.py  60fef95dbcfd_add_user_meetings_table_and_links_in_.py  7133c9980fb4_add_meetingmodel.py  7317e766c6c1_remove_teamroletype_from_teammodel_and_.py  73e2f0159270_add_list_commentmodel_to_mapped_.py  83c10c254423_alter_usermodel.py  9717a0d6063d_add_title_and_dewscription_to_meeting_.py  981f619b165e_delete_one_to_one_relationship_in_.py  a425c57dcdfa_add_uaseadminview_model.py  adec8ca0fa56_add_teammodel.py  b35440417f25_add_name_and_surname_column_to_usremodel.py  b947ba994b59_add_relationship_to_ratingmodel.py  ba454d338270_add_forign_key_to_relationship_team_in_.py  (+6 more)
app/: config.py  database.py  main.py  services.py
app/auth/: auth.py  (+2 more)
static/: style.css
(+25 files in other folders)
